tdf#157939 drop duplicates from the FontConfig Set

when we drop them from our own font list, that way we don't get
suggestions for glyph fallback which we can't satisfy

Also prefer our application fonts to system fonts when they
share the same version number where they should be the same, but
more than once we have a system-side font with oddities.

Change-Id: I90bd3311e0f37bacd60d20e1c1a6769b551b8b76
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158841
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>